# api/v1/routes/tenants.routes.js
@@ -8,8 +8,14 @@ module.exports = function(app) {
    * @swagger
    * /tenants/{id}:
    *  get:
+   *    summary: Get Tenant By Id
    *    description: Get Tenant By Id
+   *    operationId: getTenant
+   *    tags:
+   *      - tenants
    *    produces:
+   *      - application/json
+   *    consumes:
    *      - application/json
    *    parameters:
    *      - name: id
@@ -20,16 +26,23 @@ module.exports = function(app) {
    *    responses:
    *      200:
    *        description: Tenant
+   *        type: object
    *        schema:
-   *          $ref: #/definitions/Tenant
+   *          $ref: '#/definitions/Tenant'
    */
   app.get('/api/v1/tenants/:id', controller.getTenant(app));
   /**
    * @swagger
    * /tenants:
    *  get:
+   *    summary: Get Tenants
    *    description: Get Page of Tenant(s)
+   *    operationId: getTenants
+   *    tags:
+   *      - tenants
    *    produces:
+   *      - application/json
+   *    consumes:
    *      - application/json
    *    parameters:
    *      - name: search
@@ -50,8 +63,9 @@ module.exports = function(app) {
    *    responses:
    *      200:
    *        description: PageResponse
+   *        type: object
    *        schema:
-   *          $ref: #/definitions/PageResponse
+   *          $ref: '#/definitions/Tenant'
    */
   app.get('/api/v1/tenants', controller.findTenants(app));
 
@@ -59,22 +73,29 @@ module.exports = function(app) {
    * @swagger
    * /tenants:
    *  post:
+   *    summary: Save Tenant
    *    description: Save Tenant
+   *    operationId: saveTenant
+   *    tags:
+   *      - tenants
    *    produces:
+   *      - application/json
+   *    consumes:
    *      - application/json
    *    parameters:
    *      - name: tenant
    *        description: Text Search String
    *        type: object
    *        schema:
-   *          $ref: #/definitions/Tenant
+   *          $ref: '#/definitions/Tenant'
    *        in: body
    *        required: true
    *    responses:
    *      200:
    *        description: Tenant
+   *        type: object
    *        schema:
-   *          $ref: #/definitions/Tenant
+   *          $ref: '#/definitions/Tenant'
    */
   app.post('/api/v1/tenants', controller.saveTenant(app));
 }
